2004-02-10 Benoit Regrain
     * FIX : bug fix in the gdcmDirList for the recursivity in directories
     * FIX : in gdcmDicomDir when the directory is empty

2004-02-06 Jean-Pierre Roux
     * ENH : - now gdcmDicomDir::CreateDicomDir() returns also the meta elements
             - GDCM_META added to gdcmDicomDirType
	     - class gdcmMeta created
     * ENH : - A brief summary is now displayed at the beginning of
	    'testDicomDir' to help disaster magnitude estimation
     * REM  : Now useless Test/explDICOMDIR.cxx

2004-02-05 Benoit Regrain
     * ENH : add methods in gdcmObject to get the hash table or the list of
       header entries
     * FIX : wrapping python for ListPatient, ListStudy, ListSerie, ListImage
     * FIX : wrapping python for TagHeaderEntryHT

2004-02-04 Benoit Regrain
     * FIX : even length for some strings when writting the dicom dir
     * FIX : sort the images in the dicom dir
     * FIX : Bug fix for python use of dicom dir
     * ADD : a python demo

2004-02-04 Jean-Pierre Roux
     * FIX : Final solution (?) for icone embedded images
     * FIX : dicomVR.dic Overlay group is not *only* 6000, but 60xxx
             (see http://medical.nema.org/dicom/2003/03_06PU.PDF)
	     add groups 6002, 6004, 6006, to allow 'clean' parsing of
	     gdcmData/gdcm-MR-SIEMENS-16.acr1
     * ENH  add gdcmData/checkWriteExplicit.sh gdcmData/checkWriteImplicit.sh
            to make full checking easier
	     
2004-02-04 Benoit Regrain
     * FIX : WriteEntries : coding style & logic in parameters
     * FIX : Set the elements to create the DicomDir in a dictionary file

2004-02-03 Benoit Regrain
     * gdcmDirList : to parse a hard drive directory in recursive (or not)
     * gdcmDicomDir : add the load of directory
     * Bug fix and print add-on

2004-02-03 Jean-Pierre Roux
     * ENH gdcmParser : allows "DICM" files, with NO group '0002'
     * FIX handling 'non string elements' unsecure area (LUT, overlays, etc)