@@ -53,7 +53,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 ProjDir=.
 SOURCE="$(InputPath)"
-PostBuild_Cmds=move                     $(ProjDir)\gdcm.py                     $(ProjDir)\..\ 
+PostBuild_Cmds=move                      $(ProjDir)\gdcm.py                      $(ProjDir)\..\ 
 # End Special Build Tool
 # Begin Target
 
@@ -137,6 +137,10 @@ SOURCE=..\..\src\gdcmJpeg12.cxx
 # Begin Source File
 
 SOURCE=..\..\src\gdcmJpeg2000.cxx
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\gdcmMeta.cxx
 # End Source File
 # Begin Source File
 
