@@ -58,7 +58,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
 PostBuild_Desc=Copy for test
-PostBuild_Cmds=copy                     ..\..\lib\gdcmdll.dll                     ..\..\gdcmPython\                 	copy                     ..\..\lib\gdcmdll.dll                     ..\..\test\                 	copy                  Release\gdcmdll.lib                  ..\..\lib\ 
+PostBuild_Cmds=copy                      ..\..\lib\gdcmdll.dll                      ..\..\gdcmPython\                  	copy                      ..\..\lib\gdcmdll.dll                      ..\..\test\                  	copy                   Release\gdcmdll.lib                   ..\..\lib\ 
 # End Special Build Tool
 
 !ELSEIF  "$(CFG)" == "gdcmdll - Win32 Debug"
@@ -90,7 +90,7 @@ LINK32=link.exe
 # Begin Special Build Tool
 SOURCE="$(InputPath)"
 PostBuild_Desc=Copy for test
-PostBuild_Cmds=copy                     ..\..\lib\gdcmdll.dll                     ..\..\gdcmPython\                 	copy                     ..\..\lib\gdcmdll.dll                     ..\..\test\                 	copy                  Debug\gdcmdll.lib                  ..\..\lib\ 
+PostBuild_Cmds=copy                      ..\..\lib\gdcmdll.dll                      ..\..\gdcmPython\                  	copy                      ..\..\lib\gdcmdll.dll                      ..\..\test\                  	copy                   Debug\gdcmdll.lib                   ..\..\lib\ 
 # End Special Build Tool
 
 !ENDIF 
@@ -161,6 +161,10 @@ SOURCE=..\gdcmJpeg12.cxx
 # Begin Source File
 
 SOURCE=..\gdcmJpeg2000.cxx
+# End Source File
+# Begin Source File
+
+SOURCE=..\gdcmMeta.cxx
 # End Source File
 # Begin Source File
 
@@ -261,6 +265,10 @@ SOURCE=..\gdcmHeaderHelper.h
 # Begin Source File
 
 SOURCE=..\gdcmImage.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\gdcmMeta.h
 # End Source File
 # Begin Source File
 
