@@ -140,6 +140,10 @@ SOURCE=..\..\src\gdcmHeaderHelper.cxx
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\gdcmImage.cxx
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\gdcmJpeg.cxx
 # End Source File
 # Begin Source File
@@ -152,6 +156,14 @@ SOURCE=..\..\src\gdcmJpeg2000.cxx
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\gdcmMeta.cxx
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\gdcmObject.cxx
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\gdcmParsePixels.cxx
 # End Source File
 # Begin Source File
@@ -160,7 +172,19 @@ SOURCE=..\..\src\gdcmParser.cxx
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\src\gdcmPatient.cxx
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\src\gdcmRLE.cxx
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\gdcmSerie.cxx
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\src\gdcmStudy.cxx
 # End Source File
 # Begin Source File
 
